<resources>
    <string name="app_name">Flora</string>
    <string name="name">Nombre</string>
    <string name="bt_add">Añadir</string>
    <string name="family">Familia</string>
    <string name="hint_habitat">Habitat</string>
    <string name="editSuccesful">La flora ha sido editada</string>
    <string name="editFail">Error, esta flora ya existe</string>
    <string name="Error">Error</string>
    <string name="add">Flora añadida</string>
    <string name="exist">Ya existe una flora con este nombre</string>
    <string name="noName">El campo Nombre es obligatorio</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="Familia">Familia</string>
    <string name="altitud">Altitud</string>
    <string name="identidficacion">Identificacion</string>
    <string name="habitat">Habitat</string>
    <string name="fitosociologia">Fitosociologia</string>
    <string name="biotipo">Biotipo</string>
    <string name="bioreproductiva">BioReproductiva</string>
    <string name="floracion">Floracion</string>
    <string name="fructificacion">Fructificacion</string>
    <string name="expresion_sexual">Expresion Sexual</string>
    <string name="polinizacion">Polinizacion</string>
    <string name="dispersion">Dispersion</string>
    <string name="num_cromosomatico">Numero Cromosomatico</string>
    <string name="rep_asexual">Reproduccion Asexual</string>
    <string name="distribucion">Distribucion</string>
    <string name="biologia">Biologia</string>
    <string name="demografia">Demografia</string>
    <string name="amenazas">Amenazas</string>
    <string name="med_propuestas">Medidas Propuestas</string>
    <string name="borrar">Borrar</string>
    <string name="spinnerFlora">listaFloras</string>
    <string name="upload">Upload</string>
    <string name="descripcion">Descripcion</string>
    <string name="edit">Edit</string>
    <string name="volverMenu">¿Volver Al menú?</string>
    <string name="perdidaDatos">Perderás los datos que hayas introducido</string>
    <string name="guardar">Guardar</string>
    <string name="cambiar">¿Cambiar Datos?</string>
    <string name="deseaCambiar">Los cambios serán Irreversibles</string>
    <string name="borrarFlora">Los datos serán irrecuperables</string>
    <string name="borrado">¿Desea borrar la flora?</string>
    <string name="floraAdd">Flora Añadida</string>
    <string name="floraBorrada">floraBorrada</string>
</resources>